# cpppls

./: .gitignore  README.md  version
client/: CHANGELOG.md  README.md  package-lock.json  package.json
client/src/: extension.ts
server/: CMakeLists.txt  main.cpp  message_buffer.h  perl_scanner.l  request_buffer.h  server.cpp  server.h
server/factory/: completionitem.cpp  completionitem.h  handler.h  lifecycle.cpp  lifecycle.h  request_handler.h  textdocument.cpp  textdocument.h  workspace.cpp  workspace.h
server/handler/: handler.h  initialize.cpp  initialize.h  initialized.cpp  initialized.h  request.h
server/handler/client/: initialize.cpp  initialize.h  initialized.cpp  initialized.h
server/handler/client/notification/: initialized.cpp  initialized.h
server/handler/client/notification/textdocument/: didopen.cpp  didopen.h  didsave.cpp  didsave.h
server/handler/client/request/: initialize.cpp  initialize.h
server/handler/client/request/textdocument/: definition.cpp  definition.h  documentsymbol.cpp  documentsymbol.h
server/handler/client/textdocument/: didopen.cpp  didopen.h  documentsymbol.cpp  documentsymbol.h
server/handler/server/notification/textdocument/: publishdiagnostics.cpp  publishdiagnostics.h
server/handler/server/request/workspace/: configuration.cpp  configuration.h
server/parser/: uri.cpp  uri.h  uritest  uritest.cpp
server/parser/uri/: uri.cpp  uri.h
server/request_handler/: handler.h
server/request_handler/client/: initialize.cpp  initialize.h  initialized.cpp  initialized.h
server/request_handler/server/workspace/: configuration.cpp  configuration.h
server/tmp/textdocument/: publishdiagnostics.cpp  publishdiagnostics.h
server/tools/: tools.cpp  tools.h
server/tools/symbol_scanner/: lex.yy.c  symbol_scanner  symbol_scanner.l
test/: boost-perlcritic.cpp  main.pl  test.pl  tmp
test/perl-lib/AJin/Parser/: Document.pm
test/perl-lib/AJin/Server/: Message.pm  Request.pm  State.pm
test/perl-lib/AJin/Server/Request/TextDocument/: DidOpen.pm  PublishDiagnostics.pm
uml/: .$pls-class.bkp  pls-class
